[gd_scene load_steps=5 format=3 uid="uid://dmdtueiex673w"]

[ext_resource type="Script" uid="uid://c1ek7rm0y40yw" path="res://ShmupSandbox/UI/Scripts/name_entry_dialog.gd" id="1_67rqg"]
[ext_resource type="FontFile" uid="uid://bqlkxtl2tvtig" path="res://ShmupSandbox/Assets/Fonts/puree____2.ttf" id="2_c6avd"]
[ext_resource type="FontFile" uid="uid://chyk1vw521kif" path="res://ShmupSandbox/Assets/Fonts/Metal Lord.otf" id="3_hha2u"]

[sub_resource type="CanvasTexture" id="CanvasTexture_s1ksk"]

[node name="name_entry_dialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_67rqg")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.133333, 0.137255, 0.137255, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_s1ksk")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 70

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="dialog_label_1" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_c6avd")
theme_override_font_sizes/font_size = 75
text = "New High Score!"

[node name="score_label" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_hha2u")
theme_override_font_sizes/font_size = 35
text = "2215156631548"

[node name="separator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="dialog_label_2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_hha2u")
theme_override_font_sizes/font_size = 35
text = "Enter your name:"

[node name="HBoxContainer_letters" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10
alignment = 1

[node name="letter_1_container" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_letters" groups=["name_entry_dialog_letter_containers"]]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2

[node name="letter_1" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_letters/letter_1_container" groups=["name_entry_dialog_letters"]]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
theme_override_fonts/font = ExtResource("3_hha2u")
theme_override_font_sizes/font_size = 35
text = "A"
horizontal_alignment = 1

[node name="letter_2_container" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_letters" groups=["name_entry_dialog_letter_containers"]]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2

[node name="letter_2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_letters/letter_2_container" groups=["name_entry_dialog_letters"]]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
theme_override_fonts/font = ExtResource("3_hha2u")
theme_override_font_sizes/font_size = 35
text = "B"
horizontal_alignment = 1

[node name="letter_3_container" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_letters" groups=["name_entry_dialog_letter_containers"]]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2

[node name="letter_3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_letters/letter_3_container" groups=["name_entry_dialog_letters"]]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
theme_override_fonts/font = ExtResource("3_hha2u")
theme_override_font_sizes/font_size = 35
text = "C"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(23, 23)
layout_mode = 2
size_flags_horizontal = 4

[node name="ok_button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_hha2u")
theme_override_font_sizes/font_size = 45
action_mode = 0
text = "OK"
flat = true

[node name="blink_timer" type="Timer" parent="."]

[node name="idle_timer" type="Timer" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/VBoxContainer/ok_button" to="." method="_on_ok_button_focus_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ok_button" to="." method="_on_ok_button_pressed"]
[connection signal="timeout" from="blink_timer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="idle_timer" to="." method="_on_idle_timer_timeout"]
